--- a/source/modules/form/control/button/_contents.scss
+++ b/source/modules/form/control/button/_contents.scss
@@ -34,6 +34,8 @@
     background-color: transparent;
     border-color: $color;
 
+    -webkit-tap-highlight-color: transparent;
+
     &:hover {
       color: #ffffff;
       background-color: darken($color, 15%);
@@ -55,6 +57,8 @@
     color: $color;
     background-color: transparent;
     border-color: transparent;
+
+    -webkit-tap-highlight-color: transparent;
 
     &:hover {
       color: #ffffff;
